level1/k8s/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
  - name: load-generator-container
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget -q -O- http://frontend.production.svc.cluster.local; done"]
  restartPolicy: OnFailure
