level1/k8s/ingress-frontend-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
